# hackathon_backend

./: .dockerignore  .gitignore  Dockerfile  debug_mongo_ssl.py  description.md  docker-compose.yml  mongo_debug_ssl.txt  mongo_verification.txt  pyproject.toml  test_pronunciation_fix.py  upload_words_to_mongo.py  verify_mongo_upload.py
.github/workflows/: deploy.yml
app/: dependencies.py  main.py
app/core/: config.py  security.py
app/db/: mongodb.py
app/models/: deck.py  podcast.py  progress.py  pronunciation.py  speaking.py  test.py  user.py  word.py
app/routers/: auth.py  decks.py  flashcards.py  podcasts.py  pronunciation.py  speaking.py  tests.py  users.py  words.py
app/services/: firebase_auth.py  podcast_generator.py  pronunciation_service.py  speaking_service.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/data/: blogPosts.js
frontend/src/pages/: AboutUsPage.jsx  AudioPlayerPage.jsx  BlogPage.jsx  BlogPostPage.jsx  CareersPage.jsx  ContactPage.jsx  CreateListeningPage.jsx  CreatePodcastPage.jsx  DecksPage.jsx  DownloadsPage.jsx  FeaturesPage.jsx  FlashcardsPage.jsx  ForSchoolsPage.jsx  LandingPage.jsx  LearningDashboard.jsx  LearningPage.jsx  ListeningPage.jsx  NotificationsPage.jsx  PricingPage.jsx  PrivacyPage.jsx  ProfilePage.jsx  PronunciationListPage.jsx  PronunciationModulePage.jsx  TermsPage.jsx  (+9 more)
scripts/: debug_flashcards_data.py  debug_test_fields.py  upload_pronunciation_modules.py  upload_speaking_questions.py  verify_rbac.py
tests/: test_rbac.py  test_security.py
(+16 files in other folders)
